force-app/main/default/objects/WorkType/fields/FSL__Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>FSL__Due_Date_Offset__c</fullName>
    <description>Minutes</description>
    <inlineHelpText>Calcula a Data de vencimento adicionando Minutos ao tempo de criação do Serviço, refletindo o SLA interno da organização</inlineHelpText>
    <label>Due Date Offset</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>