force-app/main/default/objects/WorkType/fields/FSL__Exact_Appointments__c.field-meta.xml
<CustomField>
    <fullName>FSL__Exact_Appointments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exact Appointments</label>
    <type>Checkbox</type>
</CustomField>