force-app/main/default/objects/WorkType/fields/TipoTrabalho__c.field-meta.xml
<CustomField>
    <fullName>TipoTrabalho__c</fullName>
    <label>Tipo do Trabalho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apresentação Proposta/ Negociação</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Cliente Ausente</fullName>
            </value>
            <value>
                <fullName>Conclusão de Negociação</fullName>
            </value>
            <value>
                <fullName>Implantação Corretora</fullName>
            </value>
            <value>
                <fullName>Loja Física</fullName>
            </value>
            <value>
                <fullName>Manutenção Corretora</fullName>
            </value>
            <value>
                <fullName>Manutenção Relacionamento</fullName>
            </value>
            <value>
                <fullName>Prospecção Corretora</fullName>
            </value>
            <value>
                <fullName>Prospecção Empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>