force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos os Tipos de trabalho</label>
</ListView>