force-app/main/default/objects/WorkType/listViews/My_WorkTypes.listView-meta.xml
<ListView>
    <fullName>My_WorkTypes</fullName>
    <filterScope>Mine</filterScope>
    <label>Meus Tipos de trabalho</label>
</ListView>